--- a/views/create.html
+++ b/views/create.html
@@ -40,18 +40,44 @@
     </nav>
     <div class="container">
 
-        <div class="jumbotron jumbotron-fluid" id="floatbox">
-            <div class="container">
-                <h1>Welcome to Your NeighborGoods</h1>
-                <p>A place where you and your neighbors can easily borrow and share items.</p>
-                <div>
-                    <a type="button" class="btn btn-success" href="login.html">Log In</a>
-                </div>
-                <div>
-                    <a type="button" class="btn btn-success" href="create.html">Sign Up</a>
+        <form id="signin">
+            <div class="form-group">
+                <div class="row">
+                    <div class="col">
+                        <label style="font-family: 'Righteous';">First Name</label>
+                        <input type="text" class="form-control" id="firstname">
+                    </div>
+                    <div class="col">
+                        <label style="font-family: 'Righteous';">Last Name</label>
+                        <input type="text" class="form-control" id="lastname">
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="form-group">
+                <label style="font-family: 'Righteous';">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="john@gmail.com">
+            </div>
+            <div class="form-group">
+                <label style="font-family: 'Righteous';">Phone Number</label>
+                <input type="number" class="form-control" id="phone" placeholder="123-456-7890">
+            </div>
+            <div class="form-group">
+                <label style="font-family: 'Righteous';" for="category">Select Community:</label>
+                <select class="custom-select" id="community">
+                </select>
+            </div>
+            <div class="form-group">
+                <label style="font-family: 'Righteous';">Password</label>
+                <input type="text" class="form-control" id="password">
+            </div>
+            <div class="form-group">
+                <label style="font-family: 'Righteous';">Confirm Password</label>
+                <input type="text" class="form-control" id="confirm">
+            </div>
+            <div class="form-group" style="text-align: center;">
+                <a type="submit" class="btn btn-success" style="align-content: center;">Sign Up</a>
+            </div>
+        </form>
 
     </div>
 </body>
