--- a/views/feed.html
+++ b/views/feed.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body class="bg">
+<body>
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" id="brand" href="index.html">NeighborGoods</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
@@ -30,30 +30,21 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="login.html">Log In</a>
+                    <a class="nav-link" id="nav-link" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="create.html">Sign Up</a>
+                    <a class="nav-link" id="nav-link" href="feed.html">NeighborFeed</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="nav-link" href="login.html">Log Out</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="container">
-
-        <div class="jumbotron jumbotron-fluid" id="floatbox">
-            <div class="container">
-                <h1>Welcome to Your NeighborGoods</h1>
-                <p>A place where you and your neighbors can easily borrow and share items.</p>
-                <div>
-                    <a type="button" class="btn btn-success" href="login.html">Log In</a>
-                </div>
-                <div>
-                    <a type="button" class="btn btn-success" href="create.html">Sign Up</a>
-                </div>
-            </div>
+        <div>
+            <h2>Get the latest updates on your NeighborGoods.</h2>
         </div>
+        <div class="feed">
 
-    </div>
-</body>
-
-</html>
+        </div>
