--- a/views/newitem.html
+++ b/views/newitem.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body class="bg">
+<body>
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" id="brand" href="index.html">NeighborGoods</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
@@ -30,28 +30,33 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="login.html">Log In</a>
+                    <a class="nav-link" id="nav-link" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="create.html">Sign Up</a>
+                    <a class="nav-link" id="nav-link" href="feed.html">NeighborFeed</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="nav-link" href="login.html">Log Out</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="container">
 
-        <div class="jumbotron jumbotron-fluid" id="floatbox">
-            <div class="container">
-                <h1>Welcome to Your NeighborGoods</h1>
-                <p>A place where you and your neighbors can easily borrow and share items.</p>
-                <div>
-                    <a type="button" class="btn btn-success" href="login.html">Log In</a>
-                </div>
-                <div>
-                    <a type="button" class="btn btn-success" href="create.html">Sign Up</a>
-                </div>
+        <form>
+            <div class="form-group">
+                <label style="font-family: 'Righteous';">Item Name</label>
+                <input type="text" class="form-control" id="item">
             </div>
-        </div>
+            <div class="form-group">
+                <label style="font-family: 'Righteous';" for="category">Select Category:</label>
+                <select class="custom-select" id="category">
+                </select>
+            </div>
+            <div class="form-group" style="text-align: center;">
+                <a type="submit" class="btn btn-success" style="align-content: center;">Add Item</a>
+            </div>
+        </form>
 
     </div>
 </body>
