additional html routing, fixed links on pages

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
 
 <body class="bg">
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" id="brand" href="index.html">NeighborGoods</a>
+        <a class="navbar-brand" id="brand" href="./index">NeighborGoods</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,10 +30,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="login.html">Log In</a>
+                    <a class="nav-link" id="nav-link" href="./login">Log In</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="create.html">Sign Up</a>
+                    <a class="nav-link" id="nav-link" href="./create">Sign Up</a>
                 </li>
             </ul>
         </div>
@@ -45,10 +45,10 @@
                 <h1>Welcome to Your NeighborGoods</h1>
                 <p>A place where you and your neighbors can easily borrow and share items.</p>
                 <div>
-                    <a type="button" class="btn btn-success" href="login.html">Log In</a>
+                    <a type="button" class="btn btn-success" href="./login">Log In</a>
                 </div>
                 <div>
-                    <a type="button" class="btn btn-success" href="create.html">Sign Up</a>
+                    <a type="button" class="btn btn-success" href="./create">Sign Up</a>
                 </div>
             </div>
         </div>
