--- a/views/feed.html
+++ b/views/feed.html
@@ -22,7 +22,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" id="brand" href="index.html">NeighborGoods</a>
+        <a class="navbar-brand" id="brand" href="./index">NeighborGoods</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="profile.html">Profile</a>
+                    <a class="nav-link" id="nav-link" href="./profile">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="feed.html">NeighborFeed</a>
+                    <a class="nav-link" id="nav-link" href="./feed">NeighborFeed</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="login.html">Log Out</a>
+                    <a class="nav-link" id="nav-link" href="./login">Log Out</a>
                 </li>
             </ul>
         </div>
