--- a/views/newitem.html
+++ b/views/newitem.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="profile.html">Profile</a>
+                    <a class="nav-link" id="nav-link" href="./profile">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="feed.html">NeighborFeed</a>
+                    <a class="nav-link" id="nav-link" href="./feed">NeighborFeed</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="login.html">Log Out</a>
+                    <a class="nav-link" id="nav-link" href="./login">Log Out</a>
                 </li>
             </ul>
         </div>
