--- a/views/profile.html
+++ b/views/profile.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="profile-image">
                     <div class="col-md-5" style="text-align: center; width: 100%;">
-                        <img src="../public/assets/profile-pic.jpg" </div>
+                        <img src="./assets/profile-pic.jpg" </div>
                     </div>
                 </div>
                 <div class="profile-info">
