--- a/views/profile.html
+++ b/views/profile.html
@@ -2,57 +2,58 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset='utf-8' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>NeighborGoods</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
-        crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="../public/styles/styles.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet'>
+    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO'
+        crossorigin='anonymous'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css' integrity='sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw'
+        crossorigin='anonymous'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./styles/styles.css'>
+    <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo'
+        crossorigin='anonymous'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js' integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49'
+        crossorigin='anonymous'></script>
+    <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js' integrity='sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy'
+        crossorigin='anonymous'></script>
+    <script src="./js/profile.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" id="brand" href="./index">NeighborGoods</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class='navbar navbar-dark bg-dark'>
+        <a class='navbar-brand' id='brand' href='./index'>NeighborGoods</a>
+        <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarNavDropdown' aria-controls='navbarNavDropdown'
+            aria-expanded='false' aria-label='Toggle navigation'>
+            <span class='navbar-toggler-icon'></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="./profile">Profile</a>
+        <div class='collapse navbar-collapse' id='navbarNavDropdown'>
+            <ul class='navbar-nav'>
+                <li class='nav-item'>
+                    <a class='nav-link' id='nav-link' href='./profile'>Profile</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="./feed">NeighborFeed</a>
+                <li class='nav-item'>
+                    <a class='nav-link' id='nav-link' href='./feed'>NeighborFeed</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="nav-link" href="./login">Log Out</a>
+                <li class='nav-item'>
+                    <a class='nav-link' id='nav-link' href='./login'>Log Out</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="container">
-        <div class="profile">
-            <div class="row">
-                <div class="profile-image">
-                    <div class="col-md-5" style="text-align: center; width: 100%;">
-                        <img src="../public/assets/profile-pic.jpg" </div>
+    <div class='container'>
+        <div class='profile'>
+            <div class='row'>
+                <div class='profile-image'>
+                    <div class='col-md-5' style='text-align: center; width: 100%;'>
+                        <img src='./assets/profile-pic.jpg' </div>
                     </div>
                 </div>
-                <div class="profile-info">
-                    <div class="col-md-7" style="width: 100%;">
-                        <h1 id="username">[Name]</h1>
-                        <h2 id="community">[Community]</h2>
+                <div class='profile-info'>
+                    <div class='col-md-7' style='width: 100%;'>
+                        <h1 id='username'>[Name]</h1>
+                        <h2 id='community'>[Community]</h2>
                         <br>
                         <p>
                             <strong>Email: </strong>[Email]</p>
@@ -62,62 +63,40 @@
                 </div>
             </div>
         </div>
-        <div class="items-lists">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Your Items</a>
+        <div class='items-lists'>
+            <ul class='nav nav-tabs'>
+                <li class='nav-item'>
+                    <a class='nav-link active' id='home-tab' data-toggle='tab' href='#home' role='tab' aria-controls='home' aria-selected='true'>Your Items</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="borrowed-tab" data-toggle="tab" href="#menu1" role="tab" aria-controls="menu1" aria-selected="false">Borrowed</a>
+                <li class='nav-item'>
+                    <a class='nav-link' id='borrowed-tab' data-toggle='tab' href='#menu1' role='tab' aria-controls='menu1' aria-selected='false'>Borrowed</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="add-item-tab" data-toggle="tab" href="#menu2" role="tab" aria-controls="menu2" aria-selected="false">Add Item</a>
+                <li class='nav-item'>
+                    <a class='nav-link' id='add-item-tab' data-toggle='tab' href='#menu2' role='tab' aria-controls='menu2' aria-selected='false'>Add Item</a>
                 </li>
             </ul>
-            <div class="tab-content">
-                <div id="home" class="tab-pane fade active">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Item name</h5>
-                            <p class="card-text">Description</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Category:</li>
-                            <li class="list-group-item">Borrowed by:</li>
-                            <li class="list-group-item">Availability:</li>
-                        </ul>
-                    </div>
+            <div class='tab-content'>
+                <div id='home' class='tab-pane fade active'>
                 </div>
-                <div id="menu1" class="tab-pane fade">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Item name</h5>
-                            <p class="card-text">Description</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Category:</li>
-                            <li class="list-group-item">Borrowed from:</li>
-                            <li class="list-group-item">Date borrowed:</li>
-                        </ul>
-                    </div>
+                <div id='menu1' class='tab-pane fade'>
                 </div>
-                <div id="menu2" class="tab-pane fade">
+                <div id='menu2' class='tab-pane fade'>
                     <form>
-                        <div class="form-group">
-                            <label style="font-family: 'Righteous';">Item Name</label>
-                            <input type="text" class="form-control" id="item">
+                        <div class='form-group'>
+                            <label style='font-family: 'Righteous';'>Item Name</label>
+                            <input type='text' class='form-control' id='item'>
                         </div>
-                        <div class="form-group">
-                            <label style="font-family: 'Righteous';">Description</label>
-                            <input type="text" class="form-control" id="description">
+                        <div class='form-group'>
+                            <label style='font-family: 'Righteous';'>Description</label>
+                            <input type='text' class='form-control' id='description'>
                         </div>
-                        <div class="form-group">
-                            <label style="font-family: 'Righteous';" for="category">Select Category:</label>
-                            <select class="custom-select" id="category">
+                        <div class='form-group'>
+                            <label style='font-family: 'Righteous';' for='category'>Select Category:</label>
+                            <select class='custom-select' id='category'>
                             </select>
                         </div>
-                        <div class="form-group" style="text-align: center;">
-                            <a type="submit" class="btn btn-success" style="align-content: center;">Add Item</a>
+                        <div class='form-group' style='text-align: center;'>
+                            <a type='submit' class='btn btn-success' style='align-content: center;'>Add Item</a>
                         </div>
                     </form>
                 </div>
