now connecting to db

--- a/views/profile.html
+++ b/views/profile.html
@@ -12,8 +12,8 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css' integrity='sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw'
         crossorigin='anonymous'>
     <link rel='stylesheet' type='text/css' media='screen' href='./styles/styles.css'>
-    <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo'
-        crossorigin='anonymous'></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js' integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49'
         crossorigin='anonymous'></script>
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js' integrity='sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy'
@@ -66,37 +66,41 @@
         <div class='items-lists'>
             <ul class='nav nav-tabs'>
                 <li class='nav-item'>
-                    <a class='nav-link active' id='home-tab' data-toggle='tab' href='#home' role='tab' aria-controls='home' aria-selected='true'>Your Items</a>
+                    <a class='nav-link active' id='home-tab' data-toggle='tab' href='#home' role='tab' aria-controls='home' aria-selected='true'>Your
+                        Items</a>
                 </li>
                 <li class='nav-item'>
                     <a class='nav-link' id='borrowed-tab' data-toggle='tab' href='#menu1' role='tab' aria-controls='menu1' aria-selected='false'>Borrowed</a>
                 </li>
                 <li class='nav-item'>
-                    <a class='nav-link' id='add-item-tab' data-toggle='tab' href='#menu2' role='tab' aria-controls='menu2' aria-selected='false'>Add Item</a>
+                    <a class='nav-link' id='add-item-tab' data-toggle='tab' href='#menu2' role='tab' aria-controls='menu2' aria-selected='false'>Add
+                        Item</a>
                 </li>
             </ul>
             <div class='tab-content'>
                 <div id='home' class='tab-pane fade active'>
+                    <div class="card items"></div>
                 </div>
                 <div id='menu1' class='tab-pane fade'>
+                        <div class="card borrow"></div>
                 </div>
                 <div id='menu2' class='tab-pane fade'>
                     <form>
                         <div class='form-group'>
-                            <label style='font-family: 'Righteous';'>Item Name</label>
+                            <label style='font-family: ' Righteous ';'>Item Name</label>
                             <input type='text' class='form-control' id='item'>
                         </div>
                         <div class='form-group'>
-                            <label style='font-family: 'Righteous';'>Description</label>
+                            <label style='font-family: ' Righteous ';'>Description</label>
                             <input type='text' class='form-control' id='description'>
                         </div>
                         <div class='form-group'>
-                            <label style='font-family: 'Righteous';' for='category'>Select Category:</label>
+                            <label style='font-family: ' Righteous ';' for='category'>Select Category:</label>
                             <select class='custom-select' id='category'>
                             </select>
                         </div>
                         <div class='form-group' style='text-align: center;'>
-                            <a type='submit' class='btn btn-success' style='align-content: center;'>Add Item</a>
+                            <button type='submit' class='btn btn-success' style='align-content: center;'>Add Item</button>
                         </div>
                     </form>
                 </div>
