--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -13,6 +13,10 @@
   padding: 10px;
 }
 
+.card {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
 .bg {
   background-image: url(../assets/background.jpg);
