--- a/views/login.html
+++ b/views/login.html
@@ -42,13 +42,13 @@
     </nav>
     <div class="container">
 
-        <form id="signin">
+        <form id="signin" method="post" action="/authenticate">
             <div class="form-group">
-                <label for="exampleInputEmail1" style="font-family: 'Righteous';">Email address</label>
+                <label for="email" style="font-family: 'Righteous';">Email address</label>
                 <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1" style="font-family: 'Righteous';">Password</label>
+                <label for="password" style="font-family: 'Righteous';">Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Password">
             </div>
             <a type="submit" class="btn btn-success" id="submitBtn">Sign In</a>
