--- a/views/profile.html
+++ b/views/profile.html
@@ -96,8 +96,7 @@
                         </div>
                         <div class='form-group'>
                             <label style='font-family:  Righteous ;' for='category'>Select Category:</label>
-                            <select class='custom-select' id='category'>
-                            </select>
+                            <input type='text' class='form-control' id='category'>
                         </div>
                         <div class='form-group' style='text-align: center;'>
                             <button type='submit' class='btn btn-success' style='align-content: center;'>Add Item</button>
